Upgraded xercesImpl to 2.11.0, mysql to 5.1.28, postgres to 9.3-1100, Jena to 2.9.0, OWL API to 3.4.8, HermiT to 1.3.8
git-svn-id: https://scm.gforge.inria.fr/svn/alignapi/trunk@1872 a7222439-140d-0410-8486-c7398dd066c2